<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_icon_selector"
        android:title="@string/main" />
    <item
        android:id="@+id/claimsFragment"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/claims" />
    <item
        android:id="@+id/documentsFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/documents" />
    <item
        android:id="@+id/infoFragment"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/info" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
</menu>
