<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingHorizontal="15dp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_in_app"
        android:textSize="32sp"
        android:layout_marginBottom="30dp"
        style="@style/DefaultStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="18dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"
            android:layout_marginEnd="18dp"
            android:layout_gravity="center"
            style="@style/DefaultStyle"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="0dp"
            style="@style/TextInputStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:inputType="textEmailAddress"
                style="@style/EditTextStyle" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="6dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="20sp"
                android:layout_marginEnd="18dp"
                android:layout_gravity="center"
                style="@style/DefaultStyle"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="0dp"
                    style="@style/TextInputStyle"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/password_is_visible">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="0dp"
                        android:inputType="textPassword"
                        android:background="@drawable/text_input_default_background"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_password"
        android:layout_gravity="end"
        android:textColor="@color/blue"
        android:textSize="14sp"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/brown"
        android:text="@string/auth"
        app:cornerRadius="7dp"
        android:textSize="20sp"
        android:layout_marginBottom="7dp"
        android:textColor="@color/white"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:text="@string/registration"
        android:textSize="14sp"/>

</LinearLayout>