<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingHorizontal="15dp"
    android:background="@color/main_background">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password_title"
        android:textSize="32sp"
        android:layout_marginBottom="30dp"
        style="@style/DefaultStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="18dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textSize="20sp"
            android:layout_marginEnd="18dp"
            android:layout_gravity="center"
            style="@style/DefaultStyle"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="0dp"
            android:layout_weight="1"
            style="@style/TextInputStyle"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:inputType="textPassword"
                style="@style/EditTextStyle" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="18dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/repeat_password"
            android:textSize="20sp"
            android:layout_marginEnd="18dp"
            android:layout_gravity="center"
            style="@style/DefaultStyle"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="0dp"
            android:layout_weight="1"
            style="@style/TextInputStyle"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:inputType="textPassword"
                style="@style/EditTextStyle" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/brown"
        android:text="@string/apply_new_password"
        app:cornerRadius="7dp"
        android:textSize="20sp"
        android:layout_marginBottom="7dp"
        android:textColor="@color/white"/>

</LinearLayout>
