<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/main_background">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:text="@string/code_send_on_email"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <EditText
            android:id="@+id/etOtp1"
            android:layout_width="56dp"
            android:layout_height="72dp"
            android:layout_margin="8dp"
            android:background="@drawable/bg_otp_box"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="1"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="24sp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/etOtp2"
            android:layout_width="56dp"
            android:layout_height="72dp"
            android:layout_margin="8dp"
            android:background="@drawable/bg_otp_box"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="1"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="24sp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/etOtp3"
            android:layout_width="56dp"
            android:layout_height="72dp"
            android:layout_margin="8dp"
            android:background="@drawable/bg_otp_box"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="1"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="24sp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/etOtp4"
            android:layout_width="56dp"
            android:layout_height="72dp"
            android:layout_margin="8dp"
            android:background="@drawable/bg_otp_box"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="1"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="24sp"
            tools:ignore="LabelFor" />

<!--        <EditText-->
<!--            android:id="@+id/etOtp5"-->
<!--            android:layout_width="56dp"-->
<!--            android:layout_height="72dp"-->
<!--            android:layout_margin="8dp"-->
<!--            android:background="@drawable/bg_otp_box"-->
<!--            android:gravity="center"-->
<!--            android:importantForAutofill="no"-->
<!--            android:inputType="text"-->
<!--            android:maxLength="1"-->
<!--            android:textAllCaps="true"-->
<!--            android:textColor="@color/black"-->
<!--            android:textCursorDrawable="@null"-->
<!--            android:textSize="24sp"-->
<!--            tools:ignore="LabelFor" />-->

    </LinearLayout>

    <TextView
        android:id="@+id/tvResendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/send_code_again"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llOtp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@drawable/base_button_color_selector"
        android:layout_marginTop="32dp"
        android:text="@string/approve_email"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/tvResendCode" />

</androidx.constraintlayout.widget.ConstraintLayout>
